<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">andDive</string>
	<string name="decoset_editor">Decoset Editor</string>
	<string name="edit_decoset">Decoset: %s</string>
	<string name="missionlist">Missions</string>
	<string name="divelist">Dives</string>
	<string name="decosets">Deco Gas Sets</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="name">Name</string>
	<string name="create_new">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="help">Help</string>
	<string name="ok">OK</string>
	<string name="cave">Cave</string>
	<string name="open_circuit">Open Circuit</string>
	<string name="open_circuit_abbrev">OC</string>
	<string name="select_gas">Gas...</string>
	<string name="select_gas_source">Select a Gas Source</string>
	<string name="select_mix">Select a Mix</string>
	<string name="mix">Mix</string>
	<string name="diluent">Diluent</string>
	<string name="unspecified">Unspecified</string>
	<string name="po2">pO2</string>
	<string name="oxygen_label">Oxygen %:</string>
	<string name="helium_label">Helium %:</string>
	<string name="o2_limit">O2 limit: %1$d min (%2$s)</string>
	<string name="o2_limit_depth">O2 limit @ %3$d %4$s: %1$d min (%2$s)</string>
	<string name="decoset_item">%1$d %2$s: %3$s</string>
	<string name="cns">CNS</string>
	<string name="otu">OTU</string>
	<string name="max_po2_exceeded">Max pO2 exceeded!</string>
	<string name="missing_name">You must provide a name</string>
	<string name="backup_successful">Backup Successful</string>
	<string name="backup_failure">Backup failed. Check the SD card</string>
	<string name="restore_successful">Restore Successful</string>
	<string name="restore_failure">One or more files failed to restore</string>
	<string name="air">Air</string>
	<string name="oxygen">Oxygen</string>
	<string name="nitrogen">Nitrogen</string>
	<string name="helium">Helium</string>
	<string name="units">Units</string>
	<string name="depth_imperial">ft</string>
	<string name="depth_metric">m</string>
	<string name="airbreaks_pref">Enable "Air" Breaks</string>
	<string name="airbreaks_summary">Take breaks from high-pO2 mixes using back gas</string>
	<string name="cc_pref">Enable Closed Circuit</string>
	<string name="cc_summary">Enable support for using constant-pO2 setpoints</string>
	<string name="gasmixer_upsell">If you buy and install
		<a href="market://search?q=pname:divestoclimb.gasmixer">Gas Mixer</a>
		you will get a lot more features for picking a best mix.</string>
	<string name="about_text">%1$s v%2$s
		\n\nCopyright 2010 Ben Roberts. divestoclimb@gmail.com.
		\n\nVisit the project website for more information: ???
		\n\nLicensed under the Apache License, Version 2.0 (the "License");
		you may not use any part of this distribution except in
		compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless
		required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS"
		BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
		express or implied. See the License for the specific language
		governing permissions and limitations under the License.
		\n\nXML output for missions is powered by the
		XMLWriter v0.2 library by David Megginson and has been released to
		the public domain. http://www.megginson.com/downloads/
	</string>
</resources>
