<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res/divestoclimb.scuba.dive"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	<RadioGroup android:id="@+id/occc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<RadioButton android:id="@+id/open_circuit"
				android:text="@string/open_circuit" />
		<RadioButton android:id="@+id/closed_circuit"
				android:text="@string/po2" />
	</RadioGroup>
	<divestoclimb.scuba.dive.NumberSelector android:id="@+id/po2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/closed_circuit"
			android:layout_toRightOf="@id/closed_circuit"
			app:increment="0.1"
			app:lowerlimit="0.4"
			app:upperlimit="1.6"
			app:decimalplaces="1"
			app:textboxwidth="40sp" />
	<TextView android:id="@+id/mixlabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/occc" />
	<ImageButton android:id="@+id/mix_remove"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/occc"
			android:layout_alignParentRight="true"
			android:src="@drawable/closedelete" />
	<Button android:id="@+id/mix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/occc"
			android:layout_toLeftOf="@id/mix_remove" />
	<TextView android:id="@+id/limits"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/mix"
			android:lines="1" />

	<Button android:id="@+id/ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/limits"
			android:layout_alignParentRight="true"
			android:text="@string/ok"
			android:minWidth="90sp" />
	<Button android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/limits"
			android:layout_toLeftOf="@id/ok"
			android:minWidth="90sp"
			android:text="@string/cancel" />
	<Button android:id="@+id/help"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/limits"
			android:layout_toLeftOf="@id/cancel"
			android:minWidth="90sp"
			android:text="@string/help" />
</RelativeLayout>